metric-dashboard/openshift/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metric-dashboard
  namespace: openlit
  labels:
    app: metric-dashboard
spec:
  ports:
    - name: theport
      port: 8000
      targetPort: theport
  selector:
    app: metric-dashboard
